--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "jsonschema>=4.25.1",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
+    "pandas-stubs==2.3.2.250926",
     "pyyaml>=6.0.3",
     "requests==2.32.5",
     "tqdm>=4.67.1",
